--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -32,6 +32,7 @@ $bp-large: 65.25em; // 1050px;
 $bp-medium: 53.125em; // 850px;
 $bp-small: 41.875em; // 670px;
 $bp-smaller: 31.25em; // 500px;
+$bp-smallest: 25em;//400px;
 
 /* ==== hamburger props ===== */
 
